# liberty-reach

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  APK_BUILD_GUIDE.md  APK_BUILD_STATUS.md  APK_READY.md  APK_STATUS.md  ARCHITECTURE.md  CREATE_RELEASE.md  DESKTOP_DOWNLOADS.md  DEVELOPER_GUIDE.md  DOWNLOAD_APK.md  FEATURES.md  HOW_TO_GET_APK.md  LICENSE  LOCAL_RUN.md  PUSH_INSTRUCTIONS.md  README.md  READY_TO_PUSH.md  SECURITY_AUDIT.md  complete-push.sh  create-release.sh  docker-compose.yml  package.json  prepare-push.sh  push-to-github.sh  tsconfig.json  turbo.json
.github/workflows/: build-apk.yml  build-desktop.yml  ci-cd.yml  ci.yml  main.yml  release.yml
apps/desktop/: README.md  build-desktop.sh  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  app.json  build-apk.sh  generate-apk.sh  package.json  tsconfig.json
apps/mobile/android/: build-simple-apk.sh  build.gradle  build.properties  settings.gradle
apps/mobile/src/: App.tsx
apps/mobile/src/store/: authStore.ts  (+2 more)
apps/web/: README.md  index.html  login.html  messenger.css  messenger.html  messenger.js  next.config.js  package.json  tsconfig.json
apps/web/public/: manifest.json
monitoring/: prometheus.yml
nginx/: nginx.conf
server/federation/: go.mod  handlers.go  main.go  metrics.go  server.go
server/signaling/: Dockerfile  Makefile  README.md  auth.go  connection.go  go.mod  main.go  redis.go  types.go
(+29 files in other folders)
