[package]
name = "liberty-reach-desktop"
version = "0.1.0"
description = "Liberty Reach Desktop - Post-Quantum Secure Messenger"
authors = ["Liberty Reach Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/liberty-reach/liberty-reach"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-autostart = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Crypto dependencies
pqcrypto-kyber = "0.1"
pqcrypto-dilithium = "0.1"
sodiumoxide = "0.2"
x25519-dalek = "2.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
